# jungle-week15-16

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260614_0001_initial_schema.py  20260615_0002_add_post_views.py  20260615_0003_rework_skill_seed.py  20260615_0004_add_drafts_and_applications.py  20260616_0005_add_recruitment_and_application_status.py  20260616_0006_add_skill_suggestions.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  documents.py  jd.py  posts.py  recommendations.py  skills.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/mcp_servers/: __init__.py  jd_crawler.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: auth.py  common.py  documents.py  jd.py  posts.py  recommendations.py  skills.py
backend/app/seeds/: skills.py
backend/app/services/: crawler_mcp.py  documents.py  jd_analyzer.py  llm.py  ocr.py  portfolio_agent.py  rag.py
backend/tests/: test_crawler_mcp.py  test_document_parser.py  test_health.py  test_jd_analyzer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: Chip.jsx  LevelPip.jsx  RadarChart.jsx
infra/systemd/: careerbuddy.service
scripts/: deploy_ec2.sh
