[project]
name = "careerbuddy-backend"
version = "0.1.0"
description = "FastAPI backend for CareerBuddy, an AI career coach for developer job preparation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "pydantic[email]>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<5",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "langchain>=0.2.12",
  "langgraph>=0.2.4",
  "langchain-openai>=0.1.20",
  "langchain-text-splitters>=0.2.4",
  "mcp>=1.2.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
